Fix `-webkit-overflow-scrolling: touch`
Former-commit-id: 3379b70d21691f350c901889ed3025989ce0db65
Former-commit-id: 9a6bf9160f366e7e1b3fbc6cc249ddbe14fa761e

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -3,6 +3,7 @@
 .sidebar {
 	overflow-y: auto;
 	overflow-x: hidden;
+	-webkit-overflow-scrolling: touch;
 }
 
 .sidebar--light {
